--- a/font/package.json
+++ b/font/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "ant-design-vue": "^4.2.1",
+    "axios": "^1.6.8",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
   }
