--- a/font/package.json
+++ b/font/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.12.11",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "unplugin-vue-components": "^0.27.0",
