fix: 网关数据源错误修复 test: 完善用户鉴权,通信链路

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,6 +26,8 @@
         <module>business</module>
         <!--Pojo-->
         <module>entity</module>
+        <!--工具-->
+        <module>utils</module>
     </modules>
 
     <build>
