--- a/backend/entity/pom.xml
+++ b/backend/entity/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <!--<maven.compiler.source>21</maven.compiler.source>-->
+        <!--<maven.compiler.target>21</maven.compiler.target>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
