--- a/font/package.json
+++ b/font/package.json
@@ -9,19 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "vue": "^3.4.21",
+    "axios": "^1.7.2",
+    "sass": "^1.77.2",
+    "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.12.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "naive-ui": "^2.38.2",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vfonts": "^0.0.3",
-    "vite": "^5.2.0",
-    "vue-tsc": "^2.0.6"
+    "vite": "^5.2.11",
+    "vue-tsc": "^2.0.19"
   }
 }
